# chatty

./: Cargo.toml  README.md  config.toml  f36a5a1b-a698-41b6-947c-57cc5e5add31_plan.json
chatty/: Cargo.toml
chatty-arg/: Cargo.toml
chatty-arg/src/: lib.rs
chatty-cli/: Cargo.toml
chatty-cli/src/: ascii.rs  lib.rs
chatty-cli/src/agents/: fictionx.rs  mod.rs
chatty-config/: Cargo.toml
chatty-config/src/: lib.rs
chatty-data-handler/: Cargo.toml
chatty-data-handler/src/: lib.rs
chatty-gemini/: Cargo.toml
chatty-gemini/src/: agent_api.rs  agent_cli.rs  lib.rs  tools.rs
chatty-gemini/src/fictionx/: recommendation.rs
chatty-primitives/: Cargo.toml
chatty-primitives/src/: lib.rs
chatty-prompt/: Cargo.toml
chatty-prompt/src/: lib.rs
chatty-rag/: Cargo.toml
chatty-service/: Cargo.toml
chatty-service/src/: ascii.rs  lib.rs  model.rs  routes.rs
chatty-text/: Cargo.toml
chatty-toolset/: Cargo.toml
chatty-toolset/src/: lib.rs  registry.rs
chatty-toolset/src/compute/: op.rs
chatty-toolset/src/fictionx/: character.rs  list_novels.rs  login.rs  mod.rs  recommendation.rs
chatty/src/: args.rs  main.rs
sample/: dbafa0ef-717d-4f65-978c-84e19580618f_story.txt
tests/: chat.sh
