[workspace]
members = [
    "chatty",
    "chatty-arg",
    "chatty-service",
    "chatty-primitives",
    "chatty-config",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0"
actix-web = "4"
colored = "2.0"
lazy_static = "1.5.0"
toml = "0.8.19"