[package]
name = "chatty-cli"
version.workspace = true
edition.workspace = true

[dependencies]
chatty-gemini = { path = "../chatty-gemini" }
chatty-prompt = { path = "../chatty-prompt" }
serde.workspace = true
serde_json.workspace = true
rig-core.workspace = true
thiserror.workspace = true
colored.workspace = true
chatty-toolset = { path = "../chatty-toolset" }
async-trait.workspace = true
tokio.workspace = true
