[package]
name = "chatty-gemini"
version.workspace = true
edition.workspace = true

[dependencies]
rig-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
chatty-toolset = { path = "../chatty-toolset" }
chatty-data-handler = { path = "../chatty-data-handler" }