[package]
name = "chatty-toolset"
version.workspace = true
edition.workspace = true

[dependencies]
rig-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true
reqwest.workspace = true
chatty-config = { path = "../chatty-config" }
uuid.workspace = true
chatty-data-handler = { path = "../chatty-data-handler" }